--- a/hedyat-alsaf/package.json
+++ b/hedyat-alsaf/package.json
@@ -14,9 +14,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.1.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
+    "vite": "^5.0.0",
     "tailwindcss": "^3.3.3",
-    "vite": "^5.0.0"
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31"
   }
 }
