--- a/hedyat-alsaf/package.json
+++ b/hedyat-alsaf/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "hedyat-alsaf",
   "version": "1.0.0",
   "private": true,
@@ -10,7 +11,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "firebase": "^10.7.0"
+    "firebase": "^10.7.0",
+    "framer-motion": "^10.16.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.1.0",
